<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_kebijakan_privasi"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="72dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/layoutPrivacyBox"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/bg_privacy_box"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_kebijakan_privasi"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:text="@string/text_isi_kebijakan_privasi"
            android:textSize="12sp" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/cbAgree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_setuju_dengan_kebijakan_privasi"
        app:layout_constraintTop_toBottomOf="@id/layoutPrivacyBox"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/btn_mulai_perjalanan_sehatmu"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/secondary_default"
        android:paddingHorizontal="20dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:enabled="false"
        android:alpha="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
